testing greater mobile playability

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,8 +30,10 @@ input {
 }
 
 .form-control, .form-control:focus {
+    /* currently testing trying to capture mobile key input*/
     border: none;
-    border-color: #5cb85c;
+    /* border-color: #5cb85c; */
+    /*color: black;*/
     color: transparent;
     box-shadow: none; 
     -webkit-box-shadow: none;
